--- a/header.css
+++ b/header.css
@@ -582,3 +582,9 @@ button {
   background-color: var(--backround-color);
 }
 /* copy write end */
+@media only screen and (min-width: 200px) and (max-width: 576px) {
+  .nav {
+      font-size: 16px;
+  }
+
+}
